<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One Touch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="input_login">Login (e-mail)</string>
    <string name="input_pwd">Senha</string>
    <string name="bt_login">Login</string>
    <string name="btRegister">Cadastre-se</string>
    <string name="input_confirm_pwd">Confirmar Senha</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="select_image">Selecionar Imagem</string>
    <string name="btOpenProvador">Provador Virtual</string>
    <string name="btClearPreferences">Limpar Preferências</string>
    <string name="btPgto">Pagamento</string>
    <string name="btOffline">Offline</string>
</resources>